# simconnect_packaging_working_example

./: README.md  build.py
simconnect_package/: CMakeLists.txt  conanfile.py
simconnect_package/include/: simconnect_package_test.h
simconnect_package/lib/: SimConnect.lib  SimConnectDebug.lib
simconnect_package/src/: package_test.cpp  simconnect_package_test.cpp
simconnect_package_consumer/: CMakeLists.txt  conanfile.py
simconnect_package_consumer/include/: simconnect_consumer.h
simconnect_package_consumer/src/: main.cpp  simconnect_consumer.cpp
simconnect_package_consumer/test_package/: conanfile.py
